Update project details and contact information

--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
         <h2>Наши проекты</h2>
         <p>Здесь отображаются наши завершенные и текущие проекты. Кликните на проект для деталей.</p>
         <ul class="project-list">
-            <li onclick="openModal('project1Modal')">Проект 1: Кастомная сборка для сервера выживания (в разработке)</li>
-            <li onclick="openModal('project2Modal')">Проект 2: Плагин для экономики (завершен)</li>
+            <li onclick="openModal('project1Modal')">Сборка FransetVanilla</li>
+            <li onclick="openModal('project2Modal')">Плагин FrostFury</li>
             <!-- Добавьте больше элементов списка по необходимости -->
         </ul>
     </section>
@@ -346,7 +346,7 @@
     
     <section id="contact">
         <h2>Контакты</h2>
-        <p>Свяжитесь с нами по email: <a href="mailto:info@fransetstudios.com">info@fransetstudios.com</a> или через Discord: KelsiDev#1234</p>
+        <p>Свяжитесь с нами в телеграм: <a href="https://t.me/kelsidev">info@fransetstudios.com</a> или через Discord: @k1romix</p>
         <!-- Замените на реальные контакты -->
     </section>
     
@@ -358,18 +358,17 @@
     <div id="project1Modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('project1Modal')">&times;</span>
-            <h2>Проект 1: Кастомная сборка для сервера выживания</h2>
-            <p>Описание: Это кастомная сборка, включающая моды на выживание, такие как новые биомы, инструменты и монстры. Статус: В разработке.</p>
-            <p>Детали: Здесь можно добавить больше информации, скриншоты или ссылки.</p>
+            <h2>FransetVanilla: Кастомная сборка для сервера выживания</h2>
+            <p>Описание: Это кастомная сборка, улучшающая элементы выживания.</p>
         </div>
     </div>
 
     <div id="project2Modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('project2Modal')">&times;</span>
-            <h2>Проект 2: Плагин для экономики</h2>
-            <p>Описание: Плагин для управления экономикой на сервере, включая валюту, магазины и торговлю. Статус: Завершен.</p>
-            <p>Детали: Здесь можно добавить больше информации, скриншоты или ссылки.</p>
+            <h2>FrostFury: Новогодний плагин</h2>
+            <p>Описание: Плагин добавляющий новогоднего босса.</p>
+            <p>Детали: Плагин создан к новому 2026 году.</p>
         </div>
     </div>
 
