Update Telegram contact link in index.html

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     
     <section id="contact">
         <h2>Контакты</h2>
-        <p>Свяжитесь с нами в телеграм: <a href="https://t.me/kelsidev">info@fransetstudios.com</a> или через Discord: @k1romix</p>
+        <p>Свяжитесь с нами в телеграм: <a href="https://t.me/kelsidev">@kelsidev</a> или через Discord: @k1romix</p>
         <!-- Замените на реальные контакты -->
     </section>
     
